data/collection/fixes/descriptions/scala/scala-3474
Before fixing #3224 the following worked:

```scala
def list[T](list: List[T]) = "foobar"
implicit def array2list[T](array: Array[T]) = array.toList
```


```scala
scala> list(Array())
res0: java.lang.String = foobar
```

But now this creates this error:

```scala
scala> list(Array())
<console>:8: error: polymorphic expression cannot be instantiated to expected type;
 found   : [T]Array[T]
 required: List[?]
       list(Array())
                 ^
```

Array[Nothing]() works, though (or anything else instead of Nothing).

I think this is a regression?